# ungula-motor

./: API.md  ARCHITECTURE.md  CMakeLists.txt  README.md  STALL_DETECTION.md  component.mk  library.json  library.properties
examples/: README.md
examples/limit_switch_homing/: limit_switch_homing.ino
examples/stall/: stall.ino
examples/step_dir_servo/: step_dir_servo.ino
examples/stepper_tmc2209_internal_pulse/: stepper_tmc2209_internal_pulse.ino
examples/ypmc_servo_brake/: ypmc_servo_brake.ino
src/: ungula_motor.h
src/basic_motor/: i_motor_driver.h  stepper_config.h  stepper_controller.cpp  stepper_controller.h  tmc_stepper.cpp  tmc_stepper.h
src/motor/: i_motor.h  i_motor_command_sink.h  i_motor_driver.h  i_motor_event_listener.h  limit_switch.h  local_motor.cpp  local_motor.h  motion_profile.h  motor_coordinator.h  motor_event.h  motor_event_publisher.h  motor_fsm.cpp  motor_fsm.h  motor_state.h  motor_types.h  remote_motor.cpp  remote_motor.h  stall_detector.h  step_generator.cpp  step_generator.h
src/motor/drivers/: tmc2209.cpp  tmc2209.h
src/motor/homing/: homing_runner.cpp  homing_runner.h  i_homeable_motor.h  i_homing_strategy.h  limit_switch_homing_strategy.cpp  limit_switch_homing_strategy.h  stall_homing_strategy.cpp  stall_homing_strategy.h
src/ungula/: motor.h
src/ungula/motor/: axis.cpp  axis.h  axis_config.h  axis_state.h  axis_types.h  driver_identity.h  i_device_transport.h  i_homing_strategy.h  i_limit_system.h  i_motion_planner.h  i_motor.h  i_motor_command_sink.h  i_motor_driver.h  i_motor_event_listener.h  i_step_signal_generator.h  limit_switch.h  local_motor.cpp  local_motor.h  motion_profile.h  motion_segment.h  motion_units.h  motor_axis.cpp  motor_axis.h  motor_axis_config.h  motor_coordinator.h  motor_diagnostics.cpp  motor_diagnostics.h  motor_event.h  motor_event_publisher.h  motor_fsm.cpp  motor_fsm.h  motor_intent.h  motor_state.h  motor_step_timing.h  motor_types.h  motor_units.h  remote_motor.cpp  remote_motor.h  result.h  stall_detector.h  (+2 more)
src/ungula/motor/actuator/: actuator_capabilities.h  can_servo_actuator.cpp  can_servo_actuator.h  i_axis_actuator.h  i_can_servo_protocol.h  step_dir_actuator.cpp  step_dir_actuator.h
src/ungula/motor/drivers/: README.md  driver_identity.h  tmc2209.cpp  tmc2209.h
src/ungula/motor/drivers/generic_stepdir/: generic_stepdir_config.h  generic_stepdir_driver.cpp  generic_stepdir_driver.h
src/ungula/motor/drivers/rmd/: rmd_can_driver.cpp  rmd_can_driver.h  rmd_config.h
src/ungula/motor/drivers/tmc2209/: README.md  fake_tmc_uart.h  i_tmc_uart.h  tmc2209_config.h  tmc2209_configurator.cpp  tmc2209_configurator.h  tmc2209_coolstep.cpp  tmc2209_coolstep.h  tmc2209_diagnostics.cpp  tmc2209_diagnostics.h  tmc2209_driver.cpp  tmc2209_driver.h  tmc2209_hal_uart.cpp  tmc2209_hal_uart.h  tmc2209_kit.cpp  tmc2209_kit.h  tmc2209_registers.h  tmc2209_stallguard.cpp  tmc2209_stallguard.h  tmc2209_uart_transport.cpp  tmc2209_uart_transport.h
src/ungula/motor/drivers/ypmc/: README.md  ypmc_config.h  ypmc_driver.cpp  ypmc_driver.h  ypmc_kit.cpp  ypmc_kit.h  ypmc_servo.cpp  ypmc_servo.h
src/ungula/motor/events/: axis_event.h  axis_event_queue.h
src/ungula/motor/homing/: home_to_limit_strategy.cpp  home_to_limit_strategy.h  homing_controller.cpp  homing_controller.h  homing_runner.cpp  homing_runner.h  i_homeable_motor.h  i_homing_axis.h  i_homing_strategy.h  limit_switch_homing_strategy.cpp  limit_switch_homing_strategy.h  stall_homing_strategy.cpp  stall_homing_strategy.h
src/ungula/motor/limits/: limit_system.cpp  limit_system.h  sensor_bank.cpp  sensor_bank.h  sensor_input.h
src/ungula/motor/planners/: trapezoidal_planner.cpp  trapezoidal_planner.h
src/ungula/motor/planning/: motion_planner.cpp  motion_planner.h  planned_move.h
src/ungula/motor/pulse/: fake_pulse_engine.h  hal_pulse_engine.cpp  hal_pulse_engine.h  i_pulse_engine.h  motion_segment.h
src/ungula/motor/step_signal/: gptimer_step_signal.cpp  gptimer_step_signal.h  rmt_step_signal.cpp  rmt_step_signal.h  step_symbol_plan.h
tests/: CMakeLists.txt  mock_homeable_motor.h  mock_motor_driver.h  test_axis_e2e_smoke.cpp  test_axis_events.cpp  test_axis_step_dir_stepper.cpp  test_current_curve.cpp  test_fake_pulse_engine.cpp  test_hal_pulse_engine.cpp  test_homing_controller.cpp  test_homing_runner.cpp  test_limit_switch_homing_strategy.cpp  test_limit_system.cpp  test_motion_planner.cpp  test_motion_units.cpp  test_motor_axis_fsm.cpp  test_motor_coordinator.cpp  test_motor_driver_interface.cpp  test_motor_event_publisher.cpp  test_motor_fsm.cpp  test_remote_motor.cpp  test_remote_motor_sink.h  test_rmd_can_driver.cpp  test_sensor_bank.cpp  test_stall_homing_strategy.cpp  test_step_dir_actuator.cpp  test_step_symbol_plan.cpp  test_stepdir_drivers.cpp  test_stepper_config.cpp  test_stepper_controller.cpp  test_tmc2209_configurator.cpp  test_tmc2209_coolstep.cpp  test_tmc2209_diagnostics.cpp  test_tmc2209_driver.cpp  test_tmc2209_hal_uart_crc.cpp  test_tmc2209_kit.cpp  test_tmc2209_stallguard.cpp  test_trapezoidal_planner.cpp  test_units_conversion.cpp  test_ypmc_kit.cpp  (+1 more)
tests/ArduinoStub/: Arduino.h  TMCStepper.h  system_stub.cpp
tests/ArduinoStub/hal/gpio/: gpio_access.h
tests/fakes/: fake_limit_system.h  fake_motor_driver.h  fake_step_signal.h  fake_tmc_transport.h
